# ancient-arch

./: .env.example  .gitignore  API_REFERENCE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile.frontend  EXECUTIVE_SUMMARY.md  LICENSE  PROJECT_ASSESSMENT.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  seeds.sql  test_api.ps1
backend/.sqlx/: query-0642000074abc87a41696cde26f9ed33fb545343abed509c4e28cb0141c4f50b.json  query-075bd24258451d77e3f539cc462fe2390a23c42ead13330c2b29cbd75e71d200.json  query-09b938b51367f6e542c698b706127f4bf537717fc6759b5935741910915b5a31.json  query-0bdc313b25435a394f8e863713fd3780ce30e56258b6ed5efce279ad86f74025.json  query-0cde9a41abc543d38679bf6bb302e5d87c74074c3e41fa39928a5105ce0977b2.json  query-0eae50ad914d2dd0e094af42d307122b4418e8954b1ecae437b34ab6cdc6d0fa.json  query-1984cfe7f74bb42d935132abbea61a81df3027c344224071e398886a855fbe9b.json  query-1a71e32adeefad4ef7b1efec1cae10cdeafd06b429f20640ede89a7c8da3987d.json  query-1e1d69f7ae0eee2063962d90f2961d8975a07c20c1c6f593955bb948afabee7c.json  query-1edf705781e8fea4530e9f97c15fe066d28f6af0e08b2c908f36db5b7eed349f.json  query-2331871b1bee44ca17f10e2e0051dd7b8ac879805519dd00ffb0410a1e9aace7.json  query-28dd0ebfb7d443e56973beded1304e924764c7e2810fc55c3a0dffbe260d4e6b.json  query-2cc54d921016b2d8e9b2c8bc6b87b9466b72799b7035bea9fe03c6cdfadeacf5.json  query-34fe8e9ecb68f9d6ae0281a6cfb5f082ace2337905feb96b7588305476bafa09.json  query-3c330643dffb79f352f898b3d15bc6f42ef59f7272e410ddacc55f11d6c82db3.json  query-3edee9d573d85e27e95b19baf2d3a7ea91fcb35965a5585fd0b66c91e39ed348.json  query-40878bc54f539883efa3a58ed6d625b5ec843c18f9126cfb8df35ecbf7fa7482.json  query-4249d1cd39d0fd629dc0cb411d1a31913199c638b7a245dd6c9e778ca12a6d30.json  query-49c4addf032e1d325ddd3261b4d13a8a28bf146b6d28b17e5b33cfae0934a0d4.json  (+60 more)
(+73 files in other folders)
