[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

jsonwebtoken = "9"
argon2 = "0.5"

dotenvy = "0.15"

utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }