[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.8", features = ["chrono", "postgres", "runtime-tokio", "tls-native-tls"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["std"] }

dotenvy = "0.15"

utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
validator = { version = "0.20.0", features = ["derive"] }
tower_governor = "0.8.0"
tracing-appender = "0.2.4"
chrono = { version = "0.4.42", features = ["serde"] }
async-trait = "0.1.89"

[dev-dependencies]
reqwest = { version = "0.12.26", features = ["json"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
uuid = { version = "1.19.0", features = ["v4"] }
